--- a/board/js_dynamic.html
+++ b/board/js_dynamic.html
@@ -4,24 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<style>
-    #addBtn{
-        background-color: blue;
-        color: white;
-    }
-    #deleteBtn{
-        background-color: rgb(17, 166, 17);
-        color: white;
-    }
-</style>
-<body>
-    <h2>Dynamic Web page</h2>
-    <input type="text" id="fruit">
-    <button id="addBtn">추가</button>
-    <button id="deleteBtn">삭제</button>
-    <ul id="fruitList"></ul>
-
     <script>
         window.onload =function(){
             const input=document.getElementById("fruit");
@@ -46,7 +28,24 @@
         }
 
     </script>
-
+</head>
+<style>
+    #addBtn{
+        background-color: blue;
+        color: white;
+    }
+    #deleteBtn{
+        background-color: rgb(17, 166, 17);
+        color: white;
+    }
+</style>
+<body>
+    <h2>Dynamic Web page</h2>
+    <input type="text" id="fruit">
+    <button id="addBtn">추가</button>
+    <button id="deleteBtn">삭제</button>
+    <ul id="fruitList"></ul>
+    <a href="../index.html">Home</a>
     
 </body>
 </html>
