--- a/index.html
+++ b/index.html
@@ -54,6 +54,87 @@
               <td>260</td>
               <td>₩ 179,000</td>
               <td>1</td>
+              <td>2025-08-1</td>
+              <td class="d-flex justify-content-center gap-2">
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/edit.html">
+                    <img src ="img/pencil.png" alt="" width="16" height="16" >
+                </a>
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html">
+                    <img src="img/magnifying.png" alt="" width="16" height="16">
+                </a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>2</td>
+              <td>Vans Knu-Skool</td>
+              <td>230</td>
+              <td>₩ 57,000</td>
+              <td>1</td>
+              <td>2025-08-10</td>
+              <td class="d-flex justify-content-center gap-2">
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/edit.html">
+                    <img src ="img/pencil.png" alt="" width="16" height="16" >
+                </a>
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html">
+                    <img src="img/magnifying.png" alt="" width="16" height="16">
+                </a>
+              </td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Asics Gel-1130</td>
+              <td>270</td>
+              <td>₩ 101,000</td>
+              <td>1</td>
+              <td>2025-08-18</td>
+              <td class="d-flex justify-content-center gap-2">
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/edit.html">
+                    <img src ="img/pencil.png" alt="" width="16" height="16" >
+                </a>
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html">
+                    <img src="img/magnifying.png" alt="" width="16" height="16">
+                </a>
+              </td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Dr. Martens 1461</td>
+              <td>255</td>
+              <td>₩ 148,000</td>
+              <td>1</td>
+              <td>2025-08-25</td>
+              <td class="d-flex justify-content-center gap-2">
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/edit.html">
+                    <img src ="img/pencil.png" alt="" width="16" height="16" >
+                </a>
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html">
+                    <img src="img/magnifying.png" alt="" width="16" height="16">
+                </a>
+              </td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>Stussy Pigment</td>
+              <td>L</td>
+              <td>₩ 73,000</td>
+              <td>1</td>
+              <td>2025-09-10</td>
+              <td class="d-flex justify-content-center gap-2">
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/edit.html">
+                    <img src ="img/pencil.png" alt="" width="16" height="16" >
+                </a>
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html">
+                    <img src="img/magnifying.png" alt="" width="16" height="16">
+                </a>
+              </td>
+            </tr>
+            <tr>
+              <td>6</td>
+              <td>Adidas Arsenal 2025/26 3rd</td>
+              <td>L</td>
+              <td>₩ 180,000</td>
+              <td>1</td>
               <td>2025-09-19</td>
               <td class="d-flex justify-content-center gap-2">
                 <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/edit.html">
