--- a/board/add.html
+++ b/board/add.html
@@ -105,7 +105,7 @@
     if (!ok){
         return;
     }
-    alert("게시물이 추가됩니다");
+    alert("상품이 추가됩니다");
     location.href = "../index.html";
   });
 </script>
