--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/edit.html">
                     <img src ="img/pencil.png" alt="" width="16" height="16" >
                 </a>
-                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html">
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html?id=1">
                     <img src="img/magnifying.png" alt="" width="16" height="16">
                 </a>
               </td>
@@ -76,7 +76,7 @@
                 <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/edit.html">
                     <img src ="img/pencil.png" alt="" width="16" height="16" >
                 </a>
-                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html">
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html?id=2">
                     <img src="img/magnifying.png" alt="" width="16" height="16">
                 </a>
               </td>
@@ -92,7 +92,7 @@
                 <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/edit.html">
                     <img src ="img/pencil.png" alt="" width="16" height="16" >
                 </a>
-                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html">
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html?id=3">
                     <img src="img/magnifying.png" alt="" width="16" height="16">
                 </a>
               </td>
@@ -108,7 +108,7 @@
                 <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/edit.html">
                     <img src ="img/pencil.png" alt="" width="16" height="16" >
                 </a>
-                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html">
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html?id=4">
                     <img src="img/magnifying.png" alt="" width="16" height="16">
                 </a>
               </td>
@@ -124,7 +124,7 @@
                 <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/edit.html">
                     <img src ="img/pencil.png" alt="" width="16" height="16" >
                 </a>
-                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html">
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html?id=5">
                     <img src="img/magnifying.png" alt="" width="16" height="16">
                 </a>
               </td>
@@ -140,7 +140,7 @@
                 <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/edit.html">
                     <img src ="img/pencil.png" alt="" width="16" height="16" >
                 </a>
-                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html">
+                <a class="btn btn-sm btn-outline-dark btn-icon" href="./board/view.html?id=6">
                     <img src="img/magnifying.png" alt="" width="16" height="16">
                 </a>
               </td>
